# Cycloscope

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE.md  README.md  RELEASING.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature_request.yml  config.yml
.github/workflows/: ci.yml  release.yml
Source/: CycleAverager.h  GoniometerComponent.cpp  GoniometerComponent.h  LabeledControl.h  ModeToggle.cpp  ModeToggle.h  NoteName.h  PeriodDetector.h  PhaseAlign.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RingBuffer.h  ScopeComponent.cpp  ScopeComponent.h  ScopeLookAndFeel.cpp  ScopeLookAndFeel.h  ScopeReduce.h  SignalUtils.h  StereoUtils.h  Trigger.h
Tests/: test_cycleaverager.cpp  test_cyclesim.cpp  test_notename.cpp  test_perioddetector.cpp  test_phasealign.cpp  test_ringbuffer.cpp  test_scopereduce.cpp  test_signalutils.cpp  test_stereoutils.cpp  test_trigger.cpp
Tools/: bench_buildlive.cpp  bench_render.cpp  render_scope_preview.cpp
docs/superpowers/specs/: 2026-06-08-spectrum-responsive-analyzer-design.md
scripts/: check-signing.sh  entitlements.plist  package.sh  sign-and-notarize.sh
